adding spam words